--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
 		"font-awesome": "latest",
 		"animate.css": "latest",
 		"angular": "latest",
-		"angular-route": "latest"
+		"angular-ui-router": "latest",
+		"angular-resource":"latest"
 
 	}
 }
