--- a/public/libs/angular-resource/bower.json
+++ b/public/libs/angular-resource/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-route",
+  "name": "angular-resource",
   "version": "1.2.20",
-  "main": "./angular-route.js",
+  "main": "./angular-resource.js",
   "dependencies": {
     "angular": "1.2.20"
   }
